Fix display of the form on smaller screens

--- a/src/components/pages/NewWorkerForm.module.scss
+++ b/src/components/pages/NewWorkerForm.module.scss
@@ -1,9 +1,13 @@
 .form {
-	width: 50rem;
 	font-family: 'Overpass', sans-serif;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
+	&__container {
+		max-width: 50rem;
+		width: 100%;
+	}
 
 	&__button {
 		display: flex;
